<resources>
    <string name="app_name">ItHappens</string>

    <!--General-->
    <string name="base_url">http://www.umori.li/api/</string>
    <string name="hello_world">Hello</string>
    <string name="action_settings">Настройки</string>
    <string name="Story">Text</string>
    <string name="Date">Date</string>
    <string name="internet_error">Не удалось загрузить истории, проверьте интернет подключение</string>
    <string name="exit_confirm">Нажмите еще раз для выхода</string>
    <string-array name="tabs_title">
        <item>Истории</item>
        <item>Избранное</item>
        <item>О приложении</item>
    </string-array>

    <!--LOG-->
    <string name="sync_adapter">StorySyncAdapter:</string>
    <string name="on_perform_sync">onPerformSync: Была проведена синхронизация</string>

    <!--About-->
    <string name="description">MobileClient</string>
    <string name="version">v.1.0</string>

    <!--QueriesMessages-->
    <string name="unknown_error">Не удалось связаться с сервером</string>
    <string name="success">Истории загружены</string>

    <!--AlertDialog-->
    <string name="alert_positive">Удалить</string>
    <string name="alert_negative">Отмена</string>
    <string name="alert_message_story">Все истории будут удалены, избранные истории сохранятся.\nВы хотите удалить истории?</string>
    <string name="alert_title_story">Удаление историй</string>
    <string name="alert_message_favorite">Удалить все истории из избранного?</string>
    <string name="alert_title_favorite">Очистка избранного</string>

    <!--Строки для Notification Enabled preference-->
    <string name="pref_enable">Включено</string>
    <string name="pref_disable">Выключено</string>
    <string name="pref_update_section">Настройки обновления</string>

    <string name="pref_update_title">Автообновление историй</string>
    <string name="pref_update_key" translatable="false">update_stories</string>
    <string name="pref_update_default" translatable="false">true</string>

    <string name="pref_update_interval_title">Интервал обновления</string>
    <string name="pref_update_interval_key" translatable="false">update_time</string>
    <string name="pref_update_interval_default" translatable="false">12</string>
    <string name="pref_update_interval_summary">Выберите оптимальный интервал</string>

    <string name="pref_notification_title">Уведомление об обновлении</string>
    <string name="pref_notification_key" translatable="false">update_notification</string>
    <string name="pref_notification_default" translatable="false">true</string>

    <string-array name="pref_update_time">
        <item>1 час</item>
        <item>6 часов</item>
        <item>12 часов</item>
        <item>24 часа</item>
    </string-array>
    <string-array name="pref_update_values">
        <item>1</item>
        <item>6</item>
        <item>12</item>
        <item>24</item>
    </string-array>

    <!-- For synchronisation -->
    <string name="content_authority">com.oxionaz.ithappens</string>
    <string name="sync_account_type">ithappens.oxionaz.com</string>
    <string name="notification_message">Новые истории загружены</string>
</resources>
