<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_update_section">
        <SwitchPreference
            android:title="@string/pref_update_title"
            android:key="@string/pref_update_key"
            android:summaryOff="@string/pref_disable"
            android:summaryOn="@string/pref_enable"
            android:defaultValue="@string/pref_update_default"/>
        <ListPreference
            android:title="@string/pref_update_interval_title"
            android:key="@string/pref_update_interval_key"
            android:dependency="@string/pref_update_key"
            android:entries="@array/pref_update_time"
            android:entryValues="@array/pref_update_values"
            android:defaultValue="@string/pref_update_interval_default"
            android:summary="@string/pref_update_interval_summary"/>
        <SwitchPreference
            android:title="@string/pref_notification_title"
            android:key="@string/pref_notification_key"
            android:dependency="@string/pref_update_key"
            android:summaryOff="@string/pref_disable"
            android:summaryOn="@string/pref_enable"
            android:defaultValue="@string/pref_notification_default"/>
    </PreferenceCategory>
</PreferenceScreen>