<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_content"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/primary"
    style="@style/Container">

    <TextView
        android:id="@+id/name_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="38sp"
        android:textColor="@color/white"
        android:text="@string/app_name"/>

    <RelativeLayout
        android:layout_width="250dp"
        android:layout_height="1.4dp"
        android:background="@color/white"
        android:layout_margin="@dimen/activity_horizontal_margin"/>

    <TextView
        android:id="@+id/text_f"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:text="@string/description"/>

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:text="@string/version"/>

</LinearLayout>
